elizabeth talk abstract added

--- a/program-Day1.html
+++ b/program-Day1.html
@@ -1,4 +1,4 @@
-<!-- Begin session 3054  -->
+<!-- Begin session 1651  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -15,7 +15,7 @@
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 3054  -->
+<!-- End session 1651  -->
 <br/>
 <!-- Begin session welcome_1  -->
 <!-- Start section header -->
@@ -206,11 +206,29 @@ can be applied to the global level.</div>
       <div class="card card-default">
         <div class="card-heading">
           <p class="card-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession13-">Methodology and challenges with using historical order and shipment data for developing near term (18 months) forecasts for manufacturers and suppliers.</a>
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession13-">Hierarchical Forecasting of Vaccine Supply Chains</a>
+          </p>
+          <p class="card-author">Bahman Rostami-Tabar</p>
+        </div>
+        <div id="collapsesession13-" class="card-collapse collapse">
+          <div class="card-body">The vaccine supply chain is extremely complex and intertwined with numerous stakeholders. As a result, the unequal distribution of vaccine resources has often resulted in large disparities in coverage, particularly in developing countries. Therefore, decision-makers must accurately estimate the demand for vaccine products and ensure vaccines will be available when and where they are required. However, producing reliable and effective vaccination forecasts is a particularly difficult task in developing countries. The primary reasons for this are a lack of data availability, poor data quality, forecasting requirements at multiple levels of geographical hierarchies, and a lack of an integrated inventory-forecasting framework. To fill this gap, in our study, we focused on the vaccine supply chain in Kenya. We propose two state-of-the-art univariate methods, namely AutoRegressive Integrated Moving Average (ARIMA) and Exponential Smoothing (ETS) using the MinT optimal forecast reconciliation approach, optimised to use the hierarchical structure of the Kenya immunization supply chain: Central vaccine store, regional vaccine stores, sub-county stores, and health facilities level. Moreover, our proposed approach was compared with conventional hierarchical approaches and evaluated using Root Mean Squared Scaled Error (RMSSE) and Continuous Ranked Probability Score (CRPS). Our study has the potential to eliminate under/overstocking, prevent waste, and meet increased demand for the vaccine. We believe that the proposed methodology will help local decision-makers who are urgently trying to arrange resources in an already strained vaccine supply chain. Therefore, our study will make a strong commitment towards strengthening the vaccine supply chain systems in developing countries.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-1">
+      <div class="ProgramTime">10:35 (UTC)</div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-11">
+      <div class="card card-default">
+        <div class="card-heading">
+          <p class="card-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession14-">Methodology and challenges with using historical order and shipment data for developing near term (18 months) forecasts for manufacturers and suppliers.</a>
           </p>
           <p class="card-author">Laila Akhlaghi and Alexis Heaton</p>
         </div>
-        <div id="collapsesession13-" class="card-collapse collapse">
+        <div id="collapsesession14-" class="card-collapse collapse">
           <div class="card-body">Over the past decade, greater partnership 
   across manufacturers, procurers, donors, countries, 
   and other organizations has enabled greater visibility 
@@ -231,24 +249,6 @@ can be applied to the global level.</div>
   methodology to provide rolling, quarterly, near term (18 month) 
   forecasts to better understand the overall demand for these products, and share with manufacturers for planning. 
 This presentation will describe the methodology applied using the available data for several years to provide quarterly near term (18 months) forecasts to the manufacturers of hormonal implants. This will be compared to methodologies developed for similar markets with less data visibility. Accuracy data for these forecasts will be shared as well as on-going efforts to transition this forecast methodology to a more robust data and analytics platform and expand to other product categories.</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-1">
-      <div class="ProgramTime">10:35 (UTC)</div>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-11">
-      <div class="card card-default">
-        <div class="card-heading">
-          <p class="card-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession14-">Hierarchical Forecasting of Vaccine Supply Chains</a>
-          </p>
-          <p class="card-author">Bahman Rostami-Tabar</p>
-        </div>
-        <div id="collapsesession14-" class="card-collapse collapse">
-          <div class="card-body">The vaccine supply chain is extremely complex and intertwined with numerous stakeholders. As a result, the unequal distribution of vaccine resources has often resulted in large disparities in coverage, particularly in developing countries. Therefore, decision-makers must accurately estimate the demand for vaccine products and ensure vaccines will be available when and where they are required. However, producing reliable and effective vaccination forecasts is a particularly difficult task in developing countries. The primary reasons for this are a lack of data availability, poor data quality, forecasting requirements at multiple levels of geographical hierarchies, and a lack of an integrated inventory-forecasting framework. To fill this gap, in our study, we focused on the vaccine supply chain in Kenya. We propose two state-of-the-art univariate methods, namely AutoRegressive Integrated Moving Average (ARIMA) and Exponential Smoothing (ETS) using the MinT optimal forecast reconciliation approach, optimised to use the hierarchical structure of the Kenya immunization supply chain: Central vaccine store, regional vaccine stores, sub-county stores, and health facilities level. Moreover, our proposed approach was compared with conventional hierarchical approaches and evaluated using Root Mean Squared Scaled Error (RMSSE) and Continuous Ranked Probability Score (CRPS). Our study has the potential to eliminate under/overstocking, prevent waste, and meet increased demand for the vaccine. We believe that the proposed methodology will help local decision-makers who are urgently trying to arrange resources in an already strained vaccine supply chain. Therefore, our study will make a strong commitment towards strengthening the vaccine supply chain systems in developing countries.</div>
         </div>
       </div>
     </div>
@@ -300,12 +300,17 @@ This presentation will describe the methodology applied using the available data
       <div class="card card-default">
         <div class="card-heading">
           <p class="card-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="#collapsekey21-">Demand forecasting for new Contraceptive technologies: Identifying common approaches and recommended applications</a>
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapsekey21-">Demand Forecasting Approaches for New Contraceptive Technologies: A Landscape Review and Recommendations for Alignment</a>
           </p>
           <p class="card-author">Elizabeth Lacroix</p>
         </div>
         <div id="collapsekey21-" class="card-collapse collapse">
-          <div class="card-body">TBD</div>
+          <div class="card-body">Diverse methodological approaches fulfill the broad spectrum of purposes of market size estimation and demand forecasting for new (and lesser used) contraceptive methods, from decisions on early research and development investments to the development of plans for initial procurement and product launch in country. Contraceptive products already at scale in a market can utilize historical procurement and consumption data, among other data sources, to inform forecasts. However, little published guidance is available on appropriate approaches to estimating contraceptive demand or future consumption in the absence of historical data.  
+
+The objectives of this landscape review were to describe the variety of approaches for modeling demand for new contraceptive methods, highlight opportunities for alignment around definitions and practices, and make recommendations to support more accurate forecasting and sound decision-making based on forecasts. We conducted key informant interviews with 28 experts representing the spectrum of interests in market size estimation and demand forecasting (e.g., Ministries of Health, donors, manufacturers, demand forecasting specialists). 
+
+This talk will present our key findings and recommendations for alignment. To support sound decision-making based on forecasts, it is essential to clarify and communicate the purpose of the forecast, outputs needed, methodological approach, and assumptions. I’ll discuss the importance of choosing a methodology that is fit for purpose, approaches for accounting for current method mix, best practices for choosing and using historical trend data for a proxy product, and the need to reality test results. These results reiterate the importance of clearly articulating assumptions, acknowledging uncertainty, and refreshing forecasts when new data becomes available.
+</div>
         </div>
       </div>
     </div>
@@ -427,7 +432,7 @@ This presentation will describe the methodology applied using the available data
   </div>
 </div>
 <!-- End session session2  -->
-<!-- Begin session 1818  -->
+<!-- Begin session 2433  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -444,7 +449,7 @@ This presentation will describe the methodology applied using the available data
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 1818  -->
+<!-- End session 2433  -->
 <br/>
 <!-- Begin session session3  -->
 <!-- Start section header -->
