elizabet photo added

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ This will be an ideal venue for authors to publish an extended full paper on the
                 </div>
 				 <div class="col-sm-3 col-md-3">
                      <figure class="thumbnail">
-                        <a href="https://scholar.google.com/citations?user=t6zUhIEAAAAJ&hl=en" target="_blank"><img src="img/elizabeth.jpeg" class="responsive" alt="Image"></a>
+                        <a href="https://scholar.google.com/citations?user=t6zUhIEAAAAJ&hl=en" target="_blank"><img src="img/elizabeth.jpg" class="responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
                             <h3>Elizabeth LaCroix  
                                 <small>Technical Advisor  <hr> Population Services International</small>
