update registeration date

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ The conference will be held at Kedge Business School in Bordeaux ...
 <!--
 <tr><td class="lead">Notification to authors: &nbsp;</td><td class="lead"><b>March 27, 2021</b></td>
 -->
-<tr><td class="lead">Registration deadline: &nbsp;</td><td class="lead"><b>May 03, 2022</b></td><tr>
+<tr><td class="lead">Registration deadline for presenters: &nbsp;</td><td class="lead"><b>May 09, 2022</b></td><tr>
 <tr><td class="lead">F4SG Workshop: &nbsp;</td><td class="lead"><b>July 10, 2022</b></td><tr>
   <tr><td class="lead">F4SG invited sessions - ISF: &nbsp;</td><td class="lead"><b>July 11-July 13, 2022</b></td><tr>
 </table> <br>
@@ -361,7 +361,7 @@ w3IncludeHTML();
 
 
                     <p class="lead" align="center">
-<em>Registration Deadline: May 09, 2022</em>
+<em>Registration Deadline for presenters: May 09, 2022</em>
                     </p>
                     <p class="lead" align="center">
                     </p>
