tweak the program

--- a/program-Day1.html
+++ b/program-Day1.html
@@ -1,4 +1,4 @@
-<!-- Begin session 855  -->
+<!-- Begin session 4476  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -15,7 +15,7 @@
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 855  -->
+<!-- End session 4476  -->
 <br/>
 <!-- Begin session welcome_1  -->
 <!-- Start section header -->
@@ -121,7 +121,7 @@
           <p class="card-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession11-"> Adapting health program forecasting methodologies to our new reality with COVID-19 vaccines.</a>
           </p>
-          <p class="card-author">Laila Akhlaghi, Wendy Prosser, and Dorthe Konradsen</p>
+          <p class="card-author">Laila Akhlaghi and Wendy Prosser</p>
         </div>
         <div id="collapsesession11-" class="card-collapse collapse">
           <div class="card-body">Supply chain management of health programs (financing, technical assistance, support, etc.) 
@@ -165,7 +165,7 @@
           <p class="card-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession12-">Immunization Visibility and Analytics Network (VAN) efforts: Review of progress towards a global collaborative demand planning initiative</a>
           </p>
-          <p class="card-author">Wendy Prosser, Laila Akhlaghi</p>
+          <p class="card-author">Wendy Prosser and Laila Akhlaghi</p>
         </div>
         <div id="collapsesession12-" class="card-collapse collapse">
           <div class="card-body">JSI has been leading an effort with other partners to strengthen supply planning capacity by LMICs for COVID-19 vaccines. A standardized tool has been developed that captures complete shipment, inventory and consumption data from currently 15 countries. 
@@ -226,7 +226,7 @@ can be applied to the global level.</div>
           <p class="card-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession14-">Methodology and challenges with using historical order and shipment data for developing near term (18 months) forecasts for manufacturers and suppliers.</a>
           </p>
-          <p class="card-author">Laila Akhlaghi and Alexis Heaton</p>
+          <p class="card-author">Laila Akhlaghi</p>
         </div>
         <div id="collapsesession14-" class="card-collapse collapse">
           <div class="card-body">Over the past decade, greater partnership 
@@ -432,7 +432,7 @@ This talk will present our key findings and recommendations for alignment. To su
   </div>
 </div>
 <!-- End session session2  -->
-<!-- Begin session 2871  -->
+<!-- Begin session 2394  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -449,7 +449,7 @@ This talk will present our key findings and recommendations for alignment. To su
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 2871  -->
+<!-- End session 2394  -->
 <br/>
 <!-- Begin session session3  -->
 <!-- Start section header -->
