--- a/program-Day1.html
+++ b/program-Day1.html
@@ -1,4 +1,4 @@
-<!-- Begin session 2505  -->
+<!-- Begin session 3485  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -15,7 +15,7 @@
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 2505  -->
+<!-- End session 3485  -->
 <br/>
 <!-- Begin session welcome_1  -->
 <!-- Start section header -->
@@ -59,7 +59,7 @@
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
-    <div class="session-title col col-md-8">Featured talk #1: How forecasters can create social good</div>
+    <div class="session-title col col-md-8">Featured talk #1: Creating social good for forecasters</div>
     <div class="session-time col col-md-4">
       08:45 - 09:15 (UTC)
       <br/>
@@ -432,7 +432,7 @@ This talk will present our key findings and recommendations for alignment. To su
   </div>
 </div>
 <!-- End session session2  -->
-<!-- Begin session 1032  -->
+<!-- Begin session 2393  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -449,7 +449,7 @@ This talk will present our key findings and recommendations for alignment. To su
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 1032  -->
+<!-- End session 2393  -->
 <br/>
 <!-- Begin session session3  -->
 <!-- Start section header -->
