--- a/program-Day1.html
+++ b/program-Day1.html
@@ -2,7 +2,7 @@
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
-    <div class="session-title col col-md-8">Regsiteration , Coffee and Refreshment</div>
+    <div class="session-title col col-md-8">Registration , Coffee and Refreshment</div>
     <div class="session-time col col-md-4">
       08:00 - 08:30 (UTC)
       <br/>
@@ -124,32 +124,32 @@
           <p class="card-author">Laila Akhlaghi and Wendy Prosser</p>
         </div>
         <div id="collapsesession11-" class="card-collapse collapse">
-          <div class="card-body">Supply chain management of health programs (financing, technical assistance, support, etc.) 
-  tend to be siloed and fall within the following health areas: 
-  HIV/AIDS, TB, malaria, sexual and reproductive health, 
+          <div class="card-body">Supply chain management of health programs (financing, technical assistance, support, etc.)
+  tend to be siloed and fall within the following health areas:
+  HIV/AIDS, TB, malaria, sexual and reproductive health,
   neglected tropical diseases (NTDs), non-communicable diseases
-  (NCDs), and vaccines. Introduction of the COVID-19 vaccine 
-  required different forecasting methodologies than is 
+  (NCDs), and vaccines. Introduction of the COVID-19 vaccine
+  required different forecasting methodologies than is
   typically used in immunization programs due to the different
-  target populations and service delivery strategies. 
-  This presentation will review the methodologies that 
-  health programs currently use for forecasting and 
-  supply planning for program related pharmaceuticals 
-  and supplies and how they vary across health areas. 
+  target populations and service delivery strategies.
+  This presentation will review the methodologies that
+  health programs currently use for forecasting and
+  supply planning for program related pharmaceuticals
+  and supplies and how they vary across health areas.
   The presentation will further review how the differing
-  strategies for immunization programs, such as focus on 
+  strategies for immunization programs, such as focus on
   children, goals and aggregated consumption, needed to be
-  adapted and updated for forecasting for the COVID-19 
-  vaccines. The presentation will also examine how the 
-  different methodologies are driven by the differences 
-  in goals, data reporting, and collections structures. 
-  Lessons learned from adapting for the COVID-19 vaccines 
-  will be discussed as possible solutions and strategies 
-  for country immunization teams to adapt how they forecast 
-  for childhood/routine immunization. As other adult, 
-  non-target based vaccines come on to the market, 
-  alternate forecasting methodologies can build on 
-  lessons learned across health program areas to 
+  adapted and updated for forecasting for the COVID-19
+  vaccines. The presentation will also examine how the
+  different methodologies are driven by the differences
+  in goals, data reporting, and collections structures.
+  Lessons learned from adapting for the COVID-19 vaccines
+  will be discussed as possible solutions and strategies
+  for country immunization teams to adapt how they forecast
+  for childhood/routine immunization. As other adult,
+  non-target based vaccines come on to the market,
+  alternate forecasting methodologies can build on
+  lessons learned across health program areas to
   provide more accurate forecasts for vaccines.</div>
         </div>
       </div>
@@ -168,30 +168,30 @@
           <p class="card-author">Wendy Prosser and Laila Akhlaghi</p>
         </div>
         <div id="collapsesession12-" class="card-collapse collapse">
-          <div class="card-body">JSI has been leading an effort with other partners to strengthen supply planning capacity by LMICs for COVID-19 vaccines. A standardized tool has been developed that captures complete shipment, inventory and consumption data from currently 15 countries. 
-This initiative, called the COVID-19 Vaccine Collaborative 
+          <div class="card-body">JSI has been leading an effort with other partners to strengthen supply planning capacity by LMICs for COVID-19 vaccines. A standardized tool has been developed that captures complete shipment, inventory and consumption data from currently 15 countries.
+This initiative, called the COVID-19 Vaccine Collaborative
 Supply Planning (CSP), is partnered with ministries of health
 in 15 countries, PATH, VillageReach, WFP, CHAI, inSupplyHealth
-, and JSH. The initiative has two main goals: 
-1) Work closely with partners to provide surge capacity to 
-help countries collect, aggregate, and triangulate 
-various sets of data, and support them to translate 
-these data into systems to support more agile and 
-responsive COVID-19 vaccine supply decisions, 
-particularly around the timing and quantity of 
-needed shipments; and 
-2) Strengthen country capacity for supply planning, 
-and improve data visibility and processes for supply 
-planning at the global, regional, and country level 
-for routine immunization as well. 
-This presentation will review the successes and 
-challenges to the second goal. Topics will include success 
-and challenges to ownership and governance, 
-data use policy, conflicts of interest, 
-partner engagement, and global-level 
+, and JSH. The initiative has two main goals:
+1) Work closely with partners to provide surge capacity to
+help countries collect, aggregate, and triangulate
+various sets of data, and support them to translate
+these data into systems to support more agile and
+responsive COVID-19 vaccine supply decisions,
+particularly around the timing and quantity of
+needed shipments; and
+2) Strengthen country capacity for supply planning,
+and improve data visibility and processes for supply
+planning at the global, regional, and country level
+for routine immunization as well.
+This presentation will review the successes and
+challenges to the second goal. Topics will include success
+and challenges to ownership and governance,
+data use policy, conflicts of interest,
+partner engagement, and global-level
 visibility for decision making. The presentation will also
-review similar success and challenges to country level 
-Visibility and Analytics (VAN) development in for 
+review similar success and challenges to country level
+Visibility and Analytics (VAN) development in for
 vaccines and how lessons learned from these efforts
 can be applied to the global level.</div>
         </div>
@@ -229,25 +229,25 @@ can be applied to the global level.</div>
           <p class="card-author">Laila Akhlaghi</p>
         </div>
         <div id="collapsesession14-" class="card-collapse collapse">
-          <div class="card-body">Over the past decade, greater partnership 
-  across manufacturers, procurers, donors, countries, 
-  and other organizations has enabled greater visibility 
-  to both supply and demand data for family products in 
+          <div class="card-body">Over the past decade, greater partnership
+  across manufacturers, procurers, donors, countries,
+  and other organizations has enabled greater visibility
+  to both supply and demand data for family products in
   low and middle income (LMIC) countries. During the same
   time period several of the contraceptive products included
   in these partnerships have experienced either fluctuations
-  in demand or supply constraints, creating uncertainty 
-  for manufacturers, procurers, and country programs. 
-  While some individual procurers developed forecasts 
-  for what they expected to procure, there were few 
-  reliable estimates of overall demand for the public 
+  in demand or supply constraints, creating uncertainty
+  for manufacturers, procurers, and country programs.
+  While some individual procurers developed forecasts
+  for what they expected to procure, there were few
+  reliable estimates of overall demand for the public
   and private not for profit market to inform manufacturer
   planning. Using data from a variety of sources provided
   via this partnership, including data provided directly
-  from manufacturers and national programs, this 
+  from manufacturers and national programs, this
   coordination group developed a collaborative forecasting
-  methodology to provide rolling, quarterly, near term (18 month) 
-  forecasts to better understand the overall demand for these products, and share with manufacturers for planning. 
+  methodology to provide rolling, quarterly, near term (18 month)
+  forecasts to better understand the overall demand for these products, and share with manufacturers for planning.
 This presentation will describe the methodology applied using the available data for several years to provide quarterly near term (18 months) forecasts to the manufacturers of hormonal implants. This will be compared to methodologies developed for similar markets with less data visibility. Accuracy data for these forecasts will be shared as well as on-going efforts to transition this forecast methodology to a more robust data and analytics platform and expand to other product categories.</div>
         </div>
       </div>
@@ -305,9 +305,9 @@ This presentation will describe the methodology applied using the available data
           <p class="card-author">Elizabeth Lacroix</p>
         </div>
         <div id="collapsekey21-" class="card-collapse collapse">
-          <div class="card-body">Diverse methodological approaches fulfill the broad spectrum of purposes of market size estimation and demand forecasting for new (and lesser used) contraceptive methods, from decisions on early research and development investments to the development of plans for initial procurement and product launch in country. Contraceptive products already at scale in a market can utilize historical procurement and consumption data, among other data sources, to inform forecasts. However, little published guidance is available on appropriate approaches to estimating contraceptive demand or future consumption in the absence of historical data.  
+          <div class="card-body">Diverse methodological approaches fulfill the broad spectrum of purposes of market size estimation and demand forecasting for new (and lesser used) contraceptive methods, from decisions on early research and development investments to the development of plans for initial procurement and product launch in country. Contraceptive products already at scale in a market can utilize historical procurement and consumption data, among other data sources, to inform forecasts. However, little published guidance is available on appropriate approaches to estimating contraceptive demand or future consumption in the absence of historical data.
 
-The objectives of this landscape review were to describe the variety of approaches for modeling demand for new contraceptive methods, highlight opportunities for alignment around definitions and practices, and make recommendations to support more accurate forecasting and sound decision-making based on forecasts. We conducted key informant interviews with 28 experts representing the spectrum of interests in market size estimation and demand forecasting (e.g., Ministries of Health, donors, manufacturers, demand forecasting specialists). 
+The objectives of this landscape review were to describe the variety of approaches for modeling demand for new contraceptive methods, highlight opportunities for alignment around definitions and practices, and make recommendations to support more accurate forecasting and sound decision-making based on forecasts. We conducted key informant interviews with 28 experts representing the spectrum of interests in market size estimation and demand forecasting (e.g., Ministries of Health, donors, manufacturers, demand forecasting specialists).
 
 This talk will present our key findings and recommendations for alignment. To support sound decision-making based on forecasts, it is essential to clarify and communicate the purpose of the forecast, outputs needed, methodological approach, and assumptions. I’ll discuss the importance of choosing a methodology that is fit for purpose, approaches for accounting for current method mix, best practices for choosing and using historical trend data for a proxy product, and the need to reality test results. These results reiterate the importance of clearly articulating assumptions, acknowledging uncertainty, and refreshing forecasts when new data becomes available.
 </div>
